--- a/style.css
+++ b/style.css
@@ -1,33 +1,36 @@
+
 body{
     background-image: url('./books.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-color:linear-gradient(0,0,0,1);
-text-align: center;
+    text-align: center;
 }
+
 .border{
     background-color: rgba(255,255,255,0.9);
-    width: 1400px;
-    display:inline-block;
-    margin-top:3%;
+    margin:3% auto;
+    width:100%;
 }
+
+
 form {
     background-color: rgba(255,255,255,0.9);
     display:inline-block;
-    margin-top:5%;
+    margin-top:-1%;
     border: 2px solid teal;
     border-radius: 4px;
-   
+    max-width: 100%;    
+        }
+
+
+.table{
+      background-color: rgba(255,255,255,0.9);
+      width:50%;
+      margin:0 15%;
     
-        }
-        .tabel{
-            background-color: rgba(255,255,255,0.9);
-           width: 1298px;
-            margin-top:5%;
-          margin-left: 25%;
-          border: 2px solid teal;
-          border-radius: 4px;
-        
-        }
-      
+      border: 2px solid teal;
+      border-radius: 4px;
+  }
+    
