--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ form {
     background-color: rgba(255,255,255,0.9);
     display:inline-block;
     /* margin-top:-1%; */
-    margin:0 auto;
+    margin:0 15%;
     border: 2px solid teal;
     border-radius: 4px;
     max-width: 100%;    
